# CatalogueInterface

./: README.md  app.py  launch_config.yaml  pyproject.toml
components/: landing.py  navbar.py
components/catalogue/: catalogue_page.py  filesystem_view_component.py
components/catalogue/catalogue_tabs/: column_overview_component.py  dataframe_matcher_component.py  file_overview_component.py
components/data_curation/: data_curation_page.py
components/data_curation/data_curation_tabs/: data_generation_tab.py  upload_file_tab.py
components/data_generation/: data_generation_page.py
data/: data_generation.py  local_data_catalogue.py
utils/: app_context.py  component_decorators.py  component_initialiser.py  directory_tree_visual.py
