[project]
name = ""
version = ""
description = ""
authors = [
    {name = "MII", email = "mnel.jnr@gmail.com"},
]
dependencies = [
    "dash>=2.6.2",
    "pandas>=1.5.0",
    "setuptools>=65.4.1",
    "DataCatalogueSystem>=1.0.1",
    "dash-bootstrap-components>=1.2.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
